--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lenis": "^1.2.3",
     "motion": "^12.4.7",
     "next": "15.1.7",
+    "next-intl": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0"
