--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-intl": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "sass": "^1.86.1"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
