--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
-    "sass": "^1.86.1"
+    "sass": "^1.86.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
