--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next/third-parties": "^15.3.0",
     "@plaiceholder/next": "^3.0.0",
     "@unpic/react": "^1.0.1",
     "@vercel/blob": "^0.27.3",
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "motion": "^12.4.7",
-    "next": "15.1.7",
+    "next": "^15.3.0",
     "next-intl": "^4.0.2",
     "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
